// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentsList When parent is Target Document should treat all Attachments as read only 1`] = `
<div
  className="attachments-list-parent"
>
  <div
    className="attachments-list-header"
  >
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <h2>
        <Connect(Translate)>
          Supporting files
        </Connect(Translate)>
      </h2>
    </Connect(NeedAuthorization)>
  </div>
  <div
    className="attachments-list"
  />
</div>
`;

exports[`AttachmentsList should render a sorted list of attachments (files) 1`] = `
<div
  className="attachments-list-parent"
>
  <div
    className="attachments-list-header"
  >
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <h2>
        <Connect(Translate)>
          Supporting files
        </Connect(Translate)>
      </h2>
    </Connect(NeedAuthorization)>
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <div
        className="attachment-add"
      >
        <Connect(UploadSupportingFile)
          entitySharedId="parentSharedId"
          storeKey="storeKey"
        />
      </div>
    </Connect(NeedAuthorization)>
  </div>
  <div
    className="attachments-list"
  />
</div>
`;

exports[`AttachmentsList when files is empty should add button in Downloads section 1`] = `
<div
  className="attachments-list-parent"
>
  <div
    className="attachments-list-header"
  >
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <h2>
        <Connect(Translate)>
          Supporting files
        </Connect(Translate)>
      </h2>
    </Connect(NeedAuthorization)>
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <div
        className="attachment-add"
      >
        <Connect(UploadSupportingFile)
          entitySharedId="parentSharedId"
          storeKey="storeKey"
        />
      </div>
    </Connect(NeedAuthorization)>
  </div>
  <div
    className="attachments-list"
  />
</div>
`;

exports[`AttachmentsList when files is empty should render nothing if user not logged in 1`] = `
<div
  className="attachments-list-parent"
>
  <div
    className="attachments-list-header"
  >
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <h2>
        <Connect(Translate)>
          Supporting files
        </Connect(Translate)>
      </h2>
    </Connect(NeedAuthorization)>
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <div
        className="attachment-add"
      >
        <Connect(UploadSupportingFile)
          entitySharedId="parentSharedId"
          storeKey="storeKey"
        />
      </div>
    </Connect(NeedAuthorization)>
  </div>
  <div
    className="attachments-list"
  />
</div>
`;

exports[`AttachmentsList when it is read only should not display the upload button 1`] = `
<div
  className="attachments-list-parent"
>
  <div
    className="attachments-list-header"
  >
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <h2>
        <Connect(Translate)>
          Supporting files
        </Connect(Translate)>
      </h2>
    </Connect(NeedAuthorization)>
  </div>
  <div
    className="attachments-list"
  />
</div>
`;
